# cpp_simple_boilerplate

./: README.md
cpp_simple_boilerplate/: .clang-format  CMakeLists.txt  CMakePresets.json  cpp_simple_boilerplate.code-workspace  sanitizer_blacklist.txt  setup_boilerplate.sh
cpp_simple_boilerplate/cmake/: cmake_cpp_data.cmake  cmake_inputs.h.in
cpp_simple_boilerplate/src/: main.cpp
md/: picofscript  workspacewarning
